--- a/src/Components/edit.css
+++ b/src/Components/edit.css
@@ -15,6 +15,8 @@
 .edit_section {
   flex-basis: 65%;
   border-right: solid #7d86ba;
+  padding-right: 8%;
+  overflow: auto;
 }
 
 .display_section {
@@ -23,4 +25,12 @@
 
 .api_input {
   width: 60%;
+}
+
+.text_link {
+  border: 1px solid #4a0756;
+  background: #f3e6fb;
+  box-shadow: 0px 1px 2px #000000;
+  border-radius: 6px;
+  overflow: auto;
 }
