--- a/src/Components/edit.css
+++ b/src/Components/edit.css
@@ -34,3 +34,18 @@
   border-radius: 6px;
   overflow: auto;
 }
+.text_link div {
+  width: 80%;
+  display: inline-block;
+}
+.text_link button {
+  position: relative;
+  top: 10px;
+  background-color: #7662ad;
+  color: white;
+  border-radius: 50%;
+  border: none;
+  width: 35px;
+  height: 35px;
+}
+/* AllLinks */
