--- a/src/Components/User.css
+++ b/src/Components/User.css
@@ -4,7 +4,7 @@
   color: white;
   background-repeat: no-repeat;
   overflow: auto;
-  height: 100%;
+  height: 90%;
 }
 
 .R_Usercontainer {
@@ -68,4 +68,10 @@ a:hover {
 
 h5 a {
   color: white;
+}
+
+@media screen and (max-width: 770px) {
+  .R_Usercontainer {
+    padding: 0 7% 10% 7%;
+  }
 }
